# marvinAutonomousTester

./: .gitignore  .gitmodules  README.md
comunicacao_android_ros2/AppAndroid/Marvin/: settings.gradle.kts
comunicacao_android_ros2/action_app_v1/: setup.cfg  setup.py
comunicacao_android_ros2/action_app_v1/action_app_v1/: action_app_android_client.py
comunicacao_android_ros2/action_marvin_interfaces/: CMakeLists.txt
comunicacao_android_ros2/action_marvin_interfaces/action/: Hover.action
comunicacao_android_ros2/action_robo_v1/: setup.cfg
comunicacao_android_ros2/action_robo_v1/action_robo_v1/: robo_action_server.py
conversor/src/: coordinateConverter.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
reinforcement_learning/: README.md
reinforcement_learning/src/: reinforcement_learning_QLearning.py
ros2_marvin/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_marvin/log/: latest_build
ros2_marvin/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_marvin/src/log/: latest_build
ros2_marvin/src/marvin_bringup/: CMakeLists.txt  package.xml
ros2_marvin/src/marvin_bringup/launch/: marvin_control.launch.py  marvin_launch.py  ur_sim_control.launch.py
ros2_marvin/src/marvin_bringup/rviz/: urdf_config.rviz
ros2_marvin/src/marvin_control/: package.xml  setup.py
ros2_marvin/src/marvin_description/: CMakeLists.txt  package.xml
ros2_marvin/src/mqtt_publish/: package.xml  setup.cfg  setup.py
testAppMarvin/: build.gradle.kts
(+218 files in other folders)
